--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   pinput: ^3.0.1
   firebase_core: ^2.16.0
   firebase_auth: ^4.10.0
+  fluttertoast: ^8.0.9
 
 dev_dependencies:
   flutter_test:
